# protoc-rs

./: Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml
protocrust/: Cargo.toml
protocrust-lexer/: Cargo.toml
protocrust-lexer/src/: lib.rs
protocrust/src/: main.rs
