[workspace]
resolver = "2"
members = [
    "protocrust",
    "protocrust-lexer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/zms-dev/protoc-rs/"
authors = ["Zach Szafran <root@zms.dev"]

[workspace.metadata.crane]
name = "protocrust"

[workspace.dependencies]
miette = { version = "7.2.0" }
